# drove_navigation

./: CMakeLists.txt  README.md  compile.sh  simulation.unitypackage
include/: time_meas.hpp
include/depth/: depth_estimation.hpp
include/detectors/: feature_detector.hpp
include/filters/: kalman.hpp
include/utils/: path_utils.hpp  time_meas.hpp
include/video_processor/: video_processor.hpp
media/: simulation.avi
media/video_results/: output_EKF_helicopter_depth_grayscale.avi  output_EKF_helicopter_depth_map.avi  output_EKF_simulation.avi  output_EKF_simulation_depth_grayscale.avi  output_EKF_simulation_depth_map.avi
scripts/: TargetSender.cpp
simulation/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
simulation/Assets/: DroneDynamicsDLL.dylib  PostCameraView.cs
simulation/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
simulation/Assets/Yuetility-Studios/YueUltimateDronePhysics/Model/Materials/: Black.mat  CarbonFrane.mat  CarbonLeg.mat  CarbonTile.mat  Gray.mat  Green.mat  Red.mat  Silver.mat  White.mat  Yellow.mat
simulation/Assets/Yuetility-Studios/YueUltimateDronePhysics/Model/Prefab/: Model.prefab
simulation/Assets/Yuetility-Studios/YueUltimateDronePhysics/Prefab/: AcroModeQuad.prefab  AltitudeHoldQuad.prefab  SelfLevelingQuad.prefab
simulation/Assets/Yuetility-Studios/YueUltimateDronePhysics/Scene/: FPVWithGamepad.unity
simulation/Assets/Yuetility-Studios/YueUltimateDronePhysics/Scripts/: DroneAutoPilot.cs  DroneSimulatorInterop.cs  DroneTargetReceiver.cs  PCDroneEmulator.cs  XBOXControllerInput.cs  YueCameraController.cs  YueDroneAnimation.cs  YueDronePhysics.cs  YueDronePhysicsConfiguration.cs  YueDroneSound.cs  YueInputModule.cs  YuePIDController.cs  YueRatesConfiguration.cs
simulation/Assets/Yuetility-Studios/YueUltimateDronePhysics/Settings/: InputManager.preset
simulation/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
simulation/UIElementsSchema/: UnityEditor.Experimental.GraphView.xsd
simulation/UserSettings/: EditorUserSettings.asset
simulation/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-6000.dwlt
src/: DroneDynamicsDLL.cpp  imageServer.py  main.cpp  videoCreator.py
src/depth/: depth_estimation.cpp
src/detectors/: feature_detector.cpp
src/filters/: kalman.cpp
src/utils/: path_utils.cpp
src/video_processor/: video_processor.cpp
tests/: test_depth_estimation.cpp  test_fast_detector.cpp  test_kalman.cpp
